Payment Integration - WIP

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -127,3 +127,16 @@
     flex-direction: column;
   }
 }
+
+.button {
+  color: white;
+  font-family: inherit;
+  font-size: .9em;
+  font-weight: 700;
+  background-color: blueviolet;
+  padding: .8em 1.4em;
+  border-radius: .2em;
+  border: 0;
+  box-shadow: 0 2px 6px rgba(0,0,0,.4);
+  cursor: pointer;
+}
